fixed white space

--- a/src/Pages/HomePage/WelcomeStyle.css
+++ b/src/Pages/HomePage/WelcomeStyle.css
@@ -17,9 +17,21 @@
 }
 
 .welcContainer {
-  min-height: calc(100vh);
+  /* max-height: calc(100vh -50em); */
 }
 
 .welcContainer_content {
   height: fit-content;
+}
+
+@media only screen and (min-width: 1020px) { 
+  .welcContainer {
+    height: 90vh;
+  }
+}
+
+@media only screen and (min-width: 1025px) { 
+  .welcContainer {
+    height: fit-content;
+  }
 }
